@@ -1,8 +1,7 @@
 package dev.application.analyze.bm_m007_bm_m016;
 
-import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.Map;
+import java.util.OptionalInt;
 
 /**
  * CommonUtilクラス
@@ -18,24 +17,21 @@ public class TimeRangeFeatureCommonUtil {
 	public static String REGISTERMAP = "registerMap";
 
 	/** テーブル情報Map */
-	private static Map<Integer, String> TABLE_MAP;
-	{
-		Map<Integer, String> tableMap = new LinkedHashMap<Integer, String>();
-		tableMap.put(1, "within_data");
-		tableMap.put(2, "within_data_20minutes_home_all_league");
-		tableMap.put(3, "within_data_20minutes_home_scored");
-		tableMap.put(4, "within_data_20minutes_away_all_league");
-		tableMap.put(5, "within_data_20minutes_away_scored");
-		tableMap.put(6, "within_data_20minutes_same_scored");
-		tableMap.put(7, "within_data_45minutes_home_all_league");
-		tableMap.put(8, "within_data_45minutes_home_scored");
-		tableMap.put(9, "within_data_45minutes_away_all_league");
-		tableMap.put(10, "within_data_45minutes_away_scored");
-		TABLE_MAP = Collections.unmodifiableMap(tableMap);
-	}
+	public static final Map<Integer, String> TABLE_MAP = Map.of(
+			1, "time_range_feature_main",
+			2, "time_range_feature_scored",
+			3, "time_range_feature_all_league",
+			4, "within_data_20minutes_away_all_league",
+			5, "within_data_20minutes_away_scored",
+			6, "within_data_20minutes_same_scored",
+			7, "within_data_45minutes_home_all_league",
+			8, "within_data_45minutes_home_scored",
+			9, "within_data_45minutes_away_all_league",
+			10, "within_data_45minutes_away_scored");
 
 	/** コンストラクタ生成禁止 */
-	private TimeRangeFeatureCommonUtil() {}
+	private TimeRangeFeatureCommonUtil() {
+	}
 
 	/**
 	 * テーブル情報マップを取得
@@ -66,6 +62,23 @@ public class TimeRangeFeatureCommonUtil {
 				dto.setSeq1(key[4]);
 		}
 		return dto;
+	}
+
+	/**
+	 * 末尾の「-<数値>」を OptionalInt で返す
+	 * @param key
+	 * @return
+	 */
+	public static OptionalInt extractTrailingSeq(String key) {
+		int i = key.lastIndexOf('-');
+		if (i < 0 || i == key.length() - 1)
+			return OptionalInt.empty();
+		String tail = key.substring(i + 1);
+		try {
+			return OptionalInt.of(Integer.parseInt(tail));
+		} catch (NumberFormatException e) {
+			return OptionalInt.empty();
+		}
 	}
 
 }
